trying to fix scrollbar style

--- a/public/styles/shop.css
+++ b/public/styles/shop.css
@@ -302,6 +302,9 @@ nav{
 .checkbox{
     overflow-y: auto;
 }
+.checkbox::-webkit-scrollbar-button{
+    display: none;
+}
 .label-marcas{
     margin-left: 5px;
 }
